--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "dependencies": {
-    "tailwindcss": "^3.4.0"
-  },
   "devDependencies": {
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^4.4.24",
+    "tailwindcss": "^3.4.0"
   }
 }
